Version 1.12.6+dev:
 * Campaigns:
   * Legend of Wesmere
     * S3: fix bug which silently disabled Urudin's retreat AI.
 * Language and i18n:
   * Updated translations: Czech, Finnish, German, Polish, Scottish Gaelic
 * Miscellaneous and bug fixes:
   * Debug commands that create units now do so for the currently controlled
     side instead of always side 1.
   * Fixed GCC 6 warnings about misleading indentation.

Version 1.12.6:
 * Campaigns:
   * Legend of Wesmere:
     * Fixed recruit lists for AI sides in MP mode.
     * Made it so the campaign displays an error and aborts when started with
       Shuffle Sides enabled in MP mode.
 * Language and i18n:
   * Updated translations: British English, Galician, Italian, Japanese,
     Portuguese, RACV, Russian, Scottish Gaelic, Slovak, Spanish, Swedish
 * Terrains:
   * Fixed glitches of river ford transitions.
 * User interface:
   * GUI1 comboboxes now use the thinner menu frame style.
   * Fixed minimap buttons appearing without contents or in the wrong state
     when the game window is resized, when using debug commands to toggle fog
     and/or shroud, and probably a lot of other occurrences that are now
     covered by a proper fix on top of the quick hacks shipped with versions
     1.11.16 and 1.12.3.
   * Fixed MP lobby games list coming up empty when Invert is checked while
     Apply Filter is not (bug #23117).
   * Fixed Observers icon appearing behind other top bar items in MP games on
     horizontal UI resolutions < 1024 (bug #24455).
   * Fixed ToD schedule progress indicator appearing behind other top bar items
     on vertical UI resolutions < 600.
 * Miscellaneous and bug fixes:
   * Revert all updates to hot-key handling which broke letter-based short-cuts
     on non-US keyboard layouts, where characters are in different key
     locations (bug #24186).
   * Fix the move-to-targets candidate action of the default AI ignoring tunnels