@@ -1,4 +1,7 @@
 Version 1.12.6+dev:
+ * Add-ons client:
+   * Fix HTML injection exploit in the wesnoth_addon_manager web index
+     generation functionality.
  * Campaigns:
    * Legend of Wesmere
      * S3: fix bug which silently disabled Urudin's retreat AI.
